--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "author": "Alena Lobacheva",
   "license": "ISC",
@@ -24,6 +24,7 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
-    "globals": "^15.8.0"
+    "globals": "^15.8.0",
+    "jest": "^29.7.0"
   }
 }
